added changes in the jupyter notebook and pyproject.toml

--- a/scripts/upload_json_to_meilisearch.ipynb
+++ b/scripts/upload_json_to_meilisearch.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,10 @@
     "import json\n",
     "import meilisearch\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('C:/Users/lloyd/OneDrive/Documents/GitHub/bghinsights/bghinsights')\n",
-    "\n",
     "# Import the modules from bghinsights\n",
-    "from pdf_processor import process_pdf\n",
-    "from text_analyzer import analyze_text_content\n",
-    "from store_data import save_json_to_azure"
+    "from bghinsights.pdf_processor import process_pdf\n",
+    "from bghinsights.text_analyzer import analyze_text_content\n",
+    "from bghinsights.store_data import save_json_to_azure"
    ]
   },
   {
